--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^5.0.1"
