--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
